RESOLVED FIXED45459
[Qt] MiniBrowser does not starts properly
https://bugs.webkit.org/show_bug.cgi?id=45459
Summary [Qt] MiniBrowser does not starts properly
Balazs Kelemen
Reported 2010-09-09 08:07:37 PDT
The faulty code is in main.cpp: BrowserWindow* window = 0; foreach (QString url, urls) { window = new BrowserWindow(); window->newWindow(url); The firstly created BrowserWindow is never shown so it just leaves in the memory and feel boring.
Attachments
proposed patch (1.84 KB, patch)
2010-09-09 08:11 PDT, Balazs Kelemen
no flags
proposed patch (1.79 KB, patch)
2010-09-09 08:28 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2010-09-09 08:11:20 PDT
Created attachment 67033 [details] proposed patch
Balazs Kelemen
Comment 2 2010-09-09 08:28:03 PDT
Created attachment 67038 [details] proposed patch Removed unnecessary newWindow->show() call.
Andreas Kling
Comment 3 2010-09-09 08:56:01 PDT
Comment on attachment 67038 [details] proposed patch > + resize(960, 640); This is now done both in the constructor and newWindow(). You can remove it from newWindow(). r=me with that changed
Csaba Osztrogonác
Comment 4 2010-09-09 09:02:37 PDT
(In reply to comment #3) > (From update of attachment 67038 [details]) > > + resize(960, 640); > > This is now done both in the constructor and newWindow(). You can remove it from newWindow(). > > r=me with that changed Manually landed in http://trac.webkit.org/changeset/67089 with this change.
Note You need to log in before you can comment on or make changes to this bug.