[Qt] MiniBrowser does not starts properly https://bugs.webkit.org/show_bug.cgi?id=45459

Patch by Balazs Kelemen <kb@inf.u-szeged.hu> on 2010-09-09
Reviewed by Andreas Kling.

Do not try set up the first window by calling newWindow on a
newly created BrowserWindow since it creates a new object.
* MiniBrowser/qt/BrowserWindow.cpp:
(BrowserWindow::BrowserWindow):
* MiniBrowser/qt/main.cpp:
(main):



Canonical link: https://commits.webkit.org/57833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67089 268f45cc-cd09-0410-ab3c-d52691b4dbfc