WebKitTools/MiniBrowser/qt/main.cpp
@@ -44,11 +44,11 @@ int main(int argc, char** argv) {
             urls.append("http://www.google.com");
     }
 
-    BrowserWindow* window = 0;
-    foreach (QString url, urls) {
-        window = new BrowserWindow();
-        window->newWindow(url);
-    }
+    BrowserWindow* window = new BrowserWindow();
+    window->load(urls[0]);
+
+    for (int i = 1; i < urls.size(); ++i)
+        window->newWindow(urls[i]);
 
     app.exec();
 
